Feature error_resolution

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,16 +88,17 @@ nav:
 - Repository: 
   - Raspberry Pi Cat関連のリポジトリ: repository/repository.md
   - Raspberry Pi Cat関連のリポジトリの説明(簡単に): repository/repository_description.md
-# - Error resolution:
-#   - Raspberry Pi Cat: error_resolution/raspicat_error_resolution.md
-#   - Raspberry Pi Cat（WSL2）: error_resolution/raspicat_error_resolution_wsl2.md
-#   - Raspberry Pi Cat V2: error_resolution/raspicat_v2_error_resolution.md
-#   - Raspberry Pi Cat V2（WSL2）: error_resolution/raspicat_v2_error_resolution_wsl2.md
+
 # - Good things to do:
 #   - やると良いこと集（初めての方は見ると良いかも？）: good_things_to_do/good_things_to_do.md
 - Chat Corner 💬:
   - 雑談: chat_corner/idle_talk.md
   - 要望: chat_corner/request.md
+  - エラー集/解決策:
+    - Raspberry Pi Cat: chat_corner/error_resolution/raspicat_error_resolution.md
+    - Raspberry Pi Cat（WSL2）: chat_corner/error_resolution/raspicat_error_resolution_wsl2.md
+    - Raspberry Pi Cat V2: chat_corner/error_resolution/raspicat_v2_error_resolution.md
+    - Raspberry Pi Cat V2（WSL2）: chat_corner/error_resolution/raspicat_v2_error_resolution_wsl2.md
   - メモ(誰でもどうぞw): chat_corner/memo.md
 - Information:
   - 上田研にある移動ロボット/センサー: information/robot_sensor.md
