Feature study_meeting git

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,3 +116,5 @@ nav:
   - 動画集: information/raspicat_mp4.md
 - Good Things to Do:
   - やると良いかも集め: good_things_to_do/good_things_to_do.md
+- Study Meeting:
+  - gitを学ぶ回: study_meeting/2022_git_github/git.md
