--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,35 +82,38 @@ nav:
   - このサイトについて: index.md
 - Document:
   - Raspberry Pi Catについて: document/raspicat_documentaion.md
-  - ちょっとだけ面倒くさい環境構築編:
-    - Raspberry Pi Cat: document/environment/Raspberry Pi Cat/environment.md
-    # - Raspberry Pi Cat（WSL2): document/environment/Raspberry Pi Cat_wsl2/environment.md
-    - Raspberry Pi Cat V2: document/environment/Raspberry Pi Cat V2/environment.md
-    - Wireless(Raspberry Pi 4B): document/environment/wireless/wireless_raspi4.md
+  
+  - ROS 2:
+    - Raspberry Pi Cat Simulator: document/ros2/raspicat_simulator.md
+    - Raspberry Pi Cat: document/ros2/raspicat.md
 
-  - 動かしてみよう編:
-    - Mapping:
-      - Raspberry Pi Cat:
-        - Raspberry Pi 3B+ & PCでマッピング: document/lets_move/mapping/Raspberry Pi Cat/raspi3_pc_mapping.md
-        - PC(rosbag)でマッピング: document/lets_move/mapping/Raspberry Pi Cat/pc_rosbag_mapping.md 
-      - Raspberry Pi Cat V2:
-        - Raspberry Pi 4Bのみでマッピング: document/lets_move/mapping/Raspberry Pi Cat V2/raspi4_only_mapping.md
+  - ROS:
+    - ちょっとだけ面倒くさい環境構築編:
+      - Raspberry Pi Cat: document/ros/environment/Raspberry Pi Cat/environment.md
+      - Raspberry Pi Cat V2: document/ros/environment/Raspberry Pi Cat V2/environment.md
+      - Wireless(Raspberry Pi 4B): document/ros/environment/wireless/wireless_raspi4.md
 
-    - Navigation:
-      - Raspberry Pi Cat:
-        - Raspberry Pi 3B+ & PCでナビゲーション: document/lets_move/navigation/Raspberry Pi Cat/raspi3_pc_navigation.md
-        - Raspberry Pi 3B+のみでナビゲーション: document/lets_move/navigation/Raspberry Pi Cat/raspi3_only_navigation.md
-      - Raspberry Pi Cat V2:
-        - Raspberry Pi 4Bのみでナビゲーション: document/lets_move/navigation/Raspberry Pi Cat V2/raspi4_only_navigation.md
+    - 動かしてみよう編:
+      - Mapping:
+        - Raspberry Pi Cat:
+          - Raspberry Pi 3B+ & PCでマッピング: document/ros/lets_move/mapping/Raspberry Pi Cat/raspi3_pc_mapping.md
+          - PC(rosbag)でマッピング: document/ros/lets_move/mapping/Raspberry Pi Cat/pc_rosbag_mapping.md 
+        - Raspberry Pi Cat V2:
+          - Raspberry Pi 4Bのみでマッピング: document/ros/lets_move/mapping/Raspberry Pi Cat V2/raspi4_only_mapping.md
 
-    - Waypoint Navigation:
-      - Raspberry Pi Cat:
-        - Raspberry Pi 3B+ & PCでナビゲーション: document/lets_move/waypoint_navigation/Raspberry Pi Cat/raspi3_pc_waypoint_navigation.md
-        - Raspberry Pi 3B+のみでナビゲーション: document/lets_move/waypoint_navigation/Raspberry Pi Cat/raspi3_only_waypoint_navigation.md
-      - Raspberry Pi Cat V2:
-        - Raspberry Pi 4Bのみでナビゲーション: document/lets_move/waypoint_navigation/Raspberry Pi Cat V2/raspi4_only_waypoint_navigation.md
-  - ROS 2勉強編:
-      - Raspberry Pi Cat Simulator（ROS 2）: document/ros2_study/raspicat_simulator.md
+      - Navigation:
+        - Raspberry Pi Cat:
+          - Raspberry Pi 3B+ & PCでナビゲーション: document/ros/lets_move/navigation/Raspberry Pi Cat/raspi3_pc_navigation.md
+          - Raspberry Pi 3B+のみでナビゲーション: document/ros/lets_move/navigation/Raspberry Pi Cat/raspi3_only_navigation.md
+        - Raspberry Pi Cat V2:
+          - Raspberry Pi 4Bのみでナビゲーション: document/ros/lets_move/navigation/Raspberry Pi Cat V2/raspi4_only_navigation.md
+
+      - Waypoint Navigation:
+        - Raspberry Pi Cat:
+          - Raspberry Pi 3B+ & PCでナビゲーション: document/ros/lets_move/waypoint_navigation/Raspberry Pi Cat/raspi3_pc_waypoint_navigation.md
+          - Raspberry Pi 3B+のみでナビゲーション: document/ros/lets_move/waypoint_navigation/Raspberry Pi Cat/raspi3_only_waypoint_navigation.md
+        - Raspberry Pi Cat V2:
+          - Raspberry Pi 4Bのみでナビゲーション: document/ros/lets_move/waypoint_navigation/Raspberry Pi Cat V2/raspi4_only_waypoint_navigation.md
 
 - Repository: 
   - Raspberry Pi Cat関連のリポジトリ: repository/repository.md
