--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ extra:
 
 markdown_extensions:
     - admonition
+    - attr_list
     - footnotes
     - pymdownx.tabbed:
         alternate_style: true
