Feat set up wired (#55)
* Rename file

* Feature Set Up Workspace

* Fix mkdocs.yml

* Feat attr_list

* Feature ssh by LAN cable

* Feature apr-scan ssh

* Feature raspi create work space

* Feature device driver install

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
     features:
         - navigation.tabs
         - navigation.top
+        - navigation.expand
         - content.code.annotate
         - content.code.copy
         - content.code.select
@@ -58,16 +59,13 @@ extra:
         link: https://twitter.com/BEIKE_RE
 
 markdown_extensions:
-    # !!! を使って文書内に見やすいスタイルを使う（Markdownのサンプルを参照）
     - admonition
-    # [^1] を使って注釈を使う（Markdownのサンプルを参照）
+    - attr_list
     - footnotes
-    - pymdownx.tabbed:  # タブで文章を切り替えられる
+    - pymdownx.tabbed:
         alternate_style: true
-    - admonition  # Warningとかの飾り付けができる
-    - pymdownx.highlight  # コードブロック用
-    - pymdownx.superfences  # コードブロック用
-    - footnotes  # 注釈用
+    - pymdownx.superfences
+    - footnotes
     - pymdownx.highlight:
         anchor_linenums: true
         line_spans: __span
@@ -83,9 +81,11 @@ nav:
 - Document:
   - Raspberry Pi Catについて: document/raspicat_documentaion.md
   
-  - ROS 2:
-    - Raspberry Pi Cat Simulator: document/ros2/raspicat_simulator.md
-    - Raspberry Pi Cat: document/ros2/raspicat.md
+  - Simulator:
+    - Raspberry Pi Cat Simulator: document/simulator/raspicat_simulator.md
+  - Real Machine:
+    - Set Up:
+      - 有線LAN（Ethernet）: document/real_machine/set_up/wired.md
 
   - ROS:
     - ちょっとだけ面倒くさい環境構築編:
