--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - run: pip install mkdocs-material
+      - run: pip install mkdocs-material pymdown-extensions
       - run: mkdocs gh-deploy --force
