--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,7 @@ nav:
       - 基本操作: document/real_machine/basic_operation/basic_operation.md
     - Set Up:
       - 有線LAN（Ethernet）: document/real_machine/set_up/wired.md
-      # - 無線LAN（Wi-Fi）: document/real_machine/set_up/wireless.md
+      - 無線LAN（Wi-Fi）: document/real_machine/set_up/wireless.md
 
 - Repository: 
   - Raspberry Pi Cat関連のリポジトリ: repository/repository.md
