--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,12 +87,16 @@ nav:
     - Set Up:
       - 有線LAN（Ethernet）: document/real_machine/set_up/wired.md
       - 無線LAN（Wi-Fi）: document/real_machine/set_up/wireless.md
+      - Ethernet LiDAR の接続: document/real_machine/set_up/ethernet_lidar.md
     - Basic Operation: 
       - 基本操作: document/real_machine/basic_operation/basic_operation.md
     - Time Synchronization: 
       - 時刻同期: document/real_machine/time_synchronization/time_synchronization.md
     - Mapping: 
       - 地図作成: document/real_machine/mapping/mapping.md
+    - Navigation:
+      - ナビゲーション: document/real_machine/navigation/navigation.md
+      - ウェイポイント ナビゲーション: document/real_machine/navigation/waypoint_navigation.md
 
 - Repository: 
   - Raspberry Pi Cat関連のリポジトリ: repository/repository.md
@@ -121,3 +125,4 @@ nav:
     - Raspberry Pi Cat V2: chat_corner/error_resolution/raspicat_v2_error_resolution.md
     - Raspberry Pi Cat V2（WSL2）: chat_corner/error_resolution/raspicat_v2_error_resolution_wsl2.md
   - メモ(誰でもどうぞw): chat_corner/memo.md
+
