Add pymdownx.details to mkdocs_extensions and update navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ markdown_extensions:
     - pymdownx.inlinehilite
     - pymdownx.snippets
     - pymdownx.superfences
+    - pymdownx.details
 
 nav:
 
@@ -88,6 +89,7 @@ nav:
       - 有線LAN（Ethernet）: document/real_machine/set_up/wired.md
       - 無線LAN（Wi-Fi）: document/real_machine/set_up/wireless.md
       - Ethernet LiDAR の接続: document/real_machine/set_up/ethernet_lidar.md
+      - Livox MID-360 環境構築: document/real_machine/set_up/livox.md
     - Basic Operation: 
       - 基本操作: document/real_machine/basic_operation/basic_operation.md
     - Time Synchronization: 
