--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,8 @@ nav:
       - 無線LAN（Wi-Fi）: document/real_machine/set_up/wireless.md
       - Ethernet LiDAR の接続: document/real_machine/set_up/ethernet_lidar.md
       - Livox MID-360 環境構築: document/real_machine/set_up/livox.md
+    - Clone & Restore:
+      - バックアップイメージの取得とリストア: document/real_machine/clone_restore.md
     - Basic Operation: 
       - 基本操作: document/real_machine/basic_operation/basic_operation.md
     - Time Synchronization: 
