たまチームの脳死コマンドドキュメントを追加

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,8 @@ nav:
     - Navigation:
       - ナビゲーション: document/real_machine/navigation/navigation.md
       - ウェイポイント ナビゲーション: document/real_machine/navigation/waypoint_navigation.md
+    - Dead Brain:
+      - たまチーム: document/real_machine/dead_brain/tama.md
 
 - Repository: 
   - Raspberry Pi Cat関連のリポジトリ: repository/repository.md
